k8s/app/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: weather-app
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
