k8s/app/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: weather-app
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
