k8s/app/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: weather-app
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
