k8s/app/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: weather-app
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
